<resources>
    <string name="app_name">SoundBoard</string>
    <string name="meepmorp">Meepmorp</string>
    <string name="inception">Inception</string>
    <string name="waow">Waow</string>
    <string name="frog">Frog</string>
    <string name="drumroll">Drumroll</string>
    <string name="wobow">Wobow</string>
    <string name="ding">Ding</string>
    <string name="trombone">Trombone</string>
    <string name="disastah">Disastah</string>
    <string name="crybaby">Crybaby</string>
    <string name="applause">Applause</string>
    <string name="cricket">Cricket</string>
</resources>
